# globalverbose

./: .description.md  .gitignore  .install.md  pyproject.toml  setup.py  url.sh
globalverbose/: __init__.py  globalverbose.py
