[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "globalverbose"
version = "0.0.1760909940"
description = "Minimal global state for verbose"
authors = [
    { name = "Justin Keogh", email = "github.com@v6y.net" },
]
dependencies = [
    "click",
]
license = "ISC"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/jakeogh/globalverbose"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
globalverbose = [
    "py.typed",
]
